--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
+
   <body>
+    <!-- NAVBAR -->
     <nav class="navbar">
       <div class="container">
         <div class="nav-brand">
@@ -38,6 +40,7 @@
       </div>
     </nav>
 
+    <!-- PRIVACY POLICY CONTENT -->
     <section class="privacy-policy">
       <div class="container">
         <h1>Privacy Policy</h1>
@@ -50,10 +53,6 @@
         </p>
 
         <h2>2. Information We Collect</h2>
-        <p>
-          We may collect personal information from you in various ways,
-          including:
-        </p>
         <ul>
           <li>Contact information (name, email, phone)</li>
           <li>Information provided through contact forms</li>
@@ -62,7 +61,6 @@
         </ul>
 
         <h2>3. How We Use Your Information</h2>
-        <p>We use the information we collect to:</p>
         <ul>
           <li>Respond to your inquiries</li>
           <li>Improve our website and services</li>
@@ -73,14 +71,12 @@
         <h2>4. Third-Party Services</h2>
         <p>
           We use third-party services including Google AdSense for advertising.
-          These services may collect information about your browsing behavior.
-          Please refer to their privacy policies:
         </p>
         <ul>
           <li>
-            <a href="https://policies.google.com/privacy" target="_blank"
-              >Google Privacy Policy</a
-            >
+            <a href="https://policies.google.com/privacy" target="_blank">
+              Google Privacy Policy
+            </a>
           </li>
         </ul>
 
@@ -98,68 +94,36 @@
 
         <h2>7. Your Rights</h2>
         <p>
-          You have the right to access, update, or delete your personal information at any time by contacting us.
-        </p>
-
-        <h2>8. Changes to This Policy</h2>
-        <p>
-          We may update this Privacy Policy from time to time to reflect changes in our practices or for other operational, legal, or regulatory reasons. We will notify you of any material changes by posting the updated policy on our website.
-        </p>
-
-        <h2>9. Contact Us</h2>
-        <p>
-          If you have any questions or concerns regarding this Privacy Policy or our privacy practices, please contact us at:
-        </p>
-        <p>
-          Email: <a href="mailto:businessqueryinfo1@gmail.com">businessqueryinfo1@gmail.com</a>
-        </p>
-      </div>
-    </section>
-
-    <footer>
-      <div class="container">
-        <div class="footer-content">
-          <div class="footer-left">
-            <h4>World2Bold</h4>
-            <p>Tech-focused development brand providing clean, fast, and scalable web solutions.</p>
-          </div>
-          <div class="footer-links">
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="services.html">Services</a>
-            <a href="projects.html">Projects</a>
-            <a href="contact.html">Contact</a>
-            <a href="privacy-policy.html">Privacy Policy</a>
-          </div>
-        </div>
-        <hr style="margin: 1.5rem 0; border: none; border-top: 1px solid rgba(255,255,255,0.1);">
-        <p style="text-align: center;">&copy; 2026 World2Bold. All rights reserved.</p>
-      </div>
           You have the right to access, update, or delete your personal
-          information. Please contact us for such requests.
+          information at any time by contacting us.
         </p>
 
         <h2>8. Changes to This Policy</h2>
         <p>
-          We may update this Privacy Policy from time to time to reflect changes in our practices or for other operational, legal, or regulatory reasons. We will notify you of any material changes by posting the updated policy on our website.
+          We may update this Privacy Policy from time to time. Updates will be
+          posted on this page.
         </p>
 
         <h2>9. Contact Us</h2>
         <p>
-          If you have any questions or concerns regarding this Privacy Policy or our privacy practices, please contact us at:
-        </p>
-        <p>
-          Email: <a href="mailto:businessqueryinfo1@gmail.com">businessqueryinfo1@gmail.com</a>
+          Email:
+          <a href="mailto:businessqueryinfo1@gmail.com">
+            businessqueryinfo1@gmail.com
+          </a>
         </p>
       </div>
     </section>
 
-    <footer>
+    <!-- FOOTER (FIXED) -->
+    <footer class="site-footer">
       <div class="container">
         <div class="footer-content">
           <div class="footer-left">
             <h4>World2Bold</h4>
-            <p>Tech-focused development brand providing clean, fast, and scalable web solutions.</p>
+            <p>
+              Tech-focused development brand providing clean, fast, and scalable
+              web solutions.
+            </p>
           </div>
           <div class="footer-links">
             <a href="index.html">Home</a>
@@ -170,8 +134,18 @@
             <a href="privacy-policy.html">Privacy Policy</a>
           </div>
         </div>
-        <hr style="margin: 1.5rem 0; border: none; border-top: 1px solid rgba(255,255,255,0.1);">
-        <p style="text-align: center;">&copy; 2026 World2Bold. All rights reserved.</p>
+
+        <hr
+          style="
+            margin: 1.5rem 0;
+            border: none;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+          "
+        />
+
+        <p style="text-align: center">
+          &copy; 2026 World2Bold. All rights reserved.
+        </p>
       </div>
     </footer>
 
